<resources>
    <string name="app_name">PicEdit Framework</string>
    <string name="stickers">STICKERS</string>
    <string name="close">close</string>
    <string name="export">export</string>
    <string name="image">image</string>
    <string name="add">Add</string>
    <string name="emoji">Emoji</string>
    <string name="meme">Meme</string>
    <string name="shapes">Shapes</string>
    <string name="widgets">Widgets</string>
</resources>